--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     	<img src="http://www.noonoi.com/book_images/2022/2022_02_24/9786168288139.jpg" alt="Book" style="width:100%">
     <div class="card-body">
       <h4 class="card-title">ผมไลฟ์สดเลี้ยงลูกสัตว์ ในยุคระหว่างดวงดาว 1</h4>
-      <a href="file:///D:/product_detail.html" class="btn btn-primary">เลือก</a>
+      <a href="https://github.com/WoonsenBB/650710698/blob/main/product_detail.html" class="btn btn-primary">เลือก</a>
     </div>
   </div></center>
 
