--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
       <a href="file:///D:/product_detail.html" class="btn btn-primary">เลือก</a>
     </div>
   </div></center>
-
+ <a href="file:///D:/about.html" class="btn btn-primary">About us</a>
 </body>
 </html>
